--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   font_awesome_flutter: ^9.1.0
   animated_text_kit: ^4.2.1
   flutter_geofire: ^2.0.0
+  url_launcher: ^6.0.10
 
 dev_dependencies:
   flutter_test:
